%% Diagrama de Classes — Subsistema de Catalogos
%% Backend MobiFix (ASP.NET Core 8 / C#)
%% Referencia: Projeto-MobiFix/Backend/{Controllers,Services,Models}/Catalogos
%%
%% Contem 3 agregados independentes: Pecas, Trotinetes, Intervencoes.
%% Nao ha dependencias entre eles dentro deste subsistema.
%%
%% NOTA: no codigo o DTO chama-se "TrotinetelCriacaoDto" (typo com 'l' extra).
%% Este diagrama segue o codigo — para corrigir: rename symbol em Visual Studio.

classDiagram
    direction LR

    %% --- PECAS ---
    class PecasController {
        <<controller>>
        -_pecaService : IPecaService
        +PecasController(pecaService : IPecaService)
        +Get() Task~IActionResult~
        +ObterPorEan(ean : string) Task~IActionResult~
        +CriarPeca(novaPeca : PecaDto) Task~IActionResult~
        +AtualizarPeca(ean : string, pecaAtualizada : PecaDto) Task~IActionResult~
        +AlterarEstado(ean : string, estadoDto : EstadoPecaDto) Task~IActionResult~
        +EliminarPeca(ean : string) Task~IActionResult~
    }

    class IPecaService {
        <<interface>>
        +GetTodasPecasAsync() Task~IEnumerable~PecaDto~~
        +GetPecaPorEanAsync(ean : string) Task~PecaDto?~
        +CriarPecaAsync(novaPeca : PecaDto) Task~PecaDto?~
        +AtualizarPecaAsync(ean : string, pecaAtualizada : PecaDto) Task~PecaDto?~
        +AlterarEstadoPecaAsync(ean : string, ativo : bool) Task~PecaDto?~
        +EliminarPecaAsync(ean : string) Task~bool~
    }

    class PecaService {
        <<service>>
        -_httpClient : HttpClient
        +PecaService(httpClient : HttpClient)
        +GetTodasPecasAsync() Task~IEnumerable~PecaDto~~
        +GetPecaPorEanAsync(ean : string) Task~PecaDto?~
        +CriarPecaAsync(novaPeca : PecaDto) Task~PecaDto?~
        +AtualizarPecaAsync(ean : string, pecaAtualizada : PecaDto) Task~PecaDto?~
        +AlterarEstadoPecaAsync(ean : string, ativo : bool) Task~PecaDto?~
        +EliminarPecaAsync(ean : string) Task~bool~
    }

    class PecaDto {
        <<DTO>>
        +CodigoEAN : string
        +Descricao : string
        +Categoria : string
        +Nome : string
        +StockAtual : int
        +PVP : float
        +CustoAquisicao : float
        +StockMinimo : int
        +PadraoReposicao : int
        +Imagem : string
        +Ativo : bool
    }

    class EstadoPecaDto {
        <<DTO>>
        +Ativo : bool
    }

    %% --- TROTINETES ---
    class TrotinetesController {
        <<controller>>
        -_trotineteService : ITrotineteService
        +TrotinetesController(trotineteService : ITrotineteService)
        +GetMinhasTrotinetes() Task~IActionResult~
        +GetTrotineteByNumero(numeroSerie : string) Task~IActionResult~
        +CriarTrotinete(criacaoDto : TrotinetelCriacaoDto) Task~IActionResult~
        +EliminarTrotinete(numeroSerie : string) Task~IActionResult~
    }

    class ITrotineteService {
        <<interface>>
        +GetTrotinetesClienteAsync(clienteNIF : string) Task~IEnumerable~TrotineteDto~~
        +GetTrotineteNumeroSerie(serie : string) Task~TrotineteDto?~
        +CriarTrotineteAsync(clienteNIF : string, criacaoDto : TrotinetelCriacaoDto) Task~TrotineteDto?~
        +EliminarTrotineteAsync(clienteNIF : string, numeroSerie : string) Task~bool~
    }

    class TrotineteService {
        <<service>>
        -_httpClient : HttpClient
        +TrotineteService(httpClient : HttpClient)
        +GetTrotinetesClienteAsync(clienteNIF : string) Task~IEnumerable~TrotineteDto~~
        +GetTrotineteNumeroSerie(serie : string) Task~TrotineteDto?~
        +CriarTrotineteAsync(clienteNIF : string, criacaoDto : TrotinetelCriacaoDto) Task~TrotineteDto?~
        +EliminarTrotineteAsync(clienteNIF : string, numeroSerie : string) Task~bool~
    }

    class TrotineteDto {
        <<DTO>>
        +NumeroSerie : string
        +Marca : string
        +Modelo : string
        +ClienteNIF : string
        +EmServico : bool
    }

    class TrotinetelCriacaoDto {
        <<DTO>>
        +NumeroSerie : string
        +Marca : string
        +Modelo : string
    }

    %% --- INTERVENCOES ---
    class IntervencoesCatalogoController {
        <<controller>>
        -_service : IIntervencaoCatalogoService
        +IntervencoesCatalogoController(service : IIntervencaoCatalogoService)
        +Listar(especialidade : string?) Task~IActionResult~
        +Obter(id : int) Task~IActionResult~
        +Criar(dto : IntervencaoCatalogoCriacaoDto) Task~IActionResult~
        +Atualizar(id : int, dto : IntervencaoCatalogoCriacaoDto) Task~IActionResult~
        +Eliminar(id : int) Task~IActionResult~
    }

    class IIntervencaoCatalogoService {
        <<interface>>
        +ListarTodasAsync(especialidade : string?) Task~IEnumerable~IntervencaoCatalogoDto~~
        +ObterPorIdAsync(id : int) Task~IntervencaoCatalogoDto?~
        +CriarAsync(dto : IntervencaoCatalogoCriacaoDto) Task~IntervencaoCatalogoDto?~
        +AtualizarAsync(id : int, dto : IntervencaoCatalogoCriacaoDto) Task~IntervencaoCatalogoDto?~
        +EliminarAsync(id : int) Task~bool~
    }

    class IntervencaoCatalogoService {
        <<service>>
        -_httpClient : HttpClient
        +IntervencaoCatalogoService(httpClient : HttpClient)
        +ListarTodasAsync(especialidade : string?) Task~IEnumerable~IntervencaoCatalogoDto~~
        +ObterPorIdAsync(id : int) Task~IntervencaoCatalogoDto?~
        +CriarAsync(dto : IntervencaoCatalogoCriacaoDto) Task~IntervencaoCatalogoDto?~
        +AtualizarAsync(id : int, dto : IntervencaoCatalogoCriacaoDto) Task~IntervencaoCatalogoDto?~
        +EliminarAsync(id : int) Task~bool~
    }

    class IntervencaoCatalogoDto {
        <<DTO>>
        +IntervencaoID : int
        +Descricao : string
        +PrecoFixoMaoDeObra : decimal
        +Especialidade : string?
    }

    class IntervencaoCatalogoCriacaoDto {
        <<DTO>>
        +Descricao : string
        +PrecoFixoMaoDeObra : decimal
        +Especialidade : string?
    }

    %% Relacoes
    PecaService                   ..|> IPecaService                  : realiza
    TrotineteService              ..|> ITrotineteService             : realiza
    IntervencaoCatalogoService    ..|> IIntervencaoCatalogoService   : realiza

    PecasController               ..> IPecaService                   : injeta
    TrotinetesController          ..> ITrotineteService              : injeta
    IntervencoesCatalogoController ..> IIntervencaoCatalogoService   : injeta

    PecasController               ..> PecaDto
    PecasController               ..> EstadoPecaDto
    IPecaService                  ..> PecaDto
    IPecaService                  ..> EstadoPecaDto

    TrotinetesController          ..> TrotinetelCriacaoDto
    ITrotineteService             ..> TrotineteDto
    ITrotineteService             ..> TrotinetelCriacaoDto

    IntervencoesCatalogoController ..> IntervencaoCatalogoCriacaoDto
    IIntervencaoCatalogoService    ..> IntervencaoCatalogoDto
    IIntervencaoCatalogoService    ..> IntervencaoCatalogoCriacaoDto
